lib.micajah.common/Resources.Micajah.Common/Styles/MasterPageThemes/Modern.css
/*------------ Header -----------------------------------------------------------------------------------------------------------------------------------------*/
.Mp_Hdr
{
    background: #276da3;
    background: -moz-linear-gradient(top, #276da3 0%, #004174 100%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#276da3), color-stop(100%,#004174));
    background: -webkit-linear-gradient(top,  #276da3 0%,#004174 100%);
    background: -o-linear-gradient(top, #276da3 0%,#004174 100%);
    background: -ms-linear-gradient(top,  #276da3 0%,#004174 100%);
    background: linear-gradient(top, #276da3 0%,#004174 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#276da3', endColorstr='#004174',GradientType=0 );
    height: 50px;
    margin: 0;
    padding: 0 5% 0 5%;
}

.Mp_Hdr a, .Mp_Hdr a:hover
{
    text-decoration: none;
}

/*------------ Logo ------------ */
.Mp_Hdr .A
{
    width: 300px;
    float: left;
    height: 50px;
    line-height: 50px;
    color: #ffffff;
    font-size: 21px;
}

.Mp_Hdr .A a, .Mp_Hdr .A a:hover
{
    color: #ffffff;
    font-size: 21px;
    margin: 12px 0;
}

.Mp_Hdr .Al
{
    float: left;
    height: 50px;
    line-height: 50px;
    padding-right: 15px;
}

/*------------ Search ------------ */
.Mp_Hdr .S
{
    float: left;
    height: 30px;
    margin: 0;
    padding: 0;
    position: relative;
    top: 10px;
}

.Mp_Hdr .S input[type=text]
{
    padding: 7px 10px !important;
    border-radius: 3px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    font-family: Sans-Serif;
    font-size: 12px !important;
    color: #999;
    width: 200px;
}

.Mp_Hdr .S input[type=submit]
{
    font-size: 12px !important;
    padding: 7px 15px;
    line-height: 100%;
}

/*------------ Global navigation links ------------ */
.Mp_Hdr .G
{
    float: right;
}

.Mp_Hdr ul.Mm
{
    height: 50px;
    width: auto;
}

.Mp_Hdr .G ul.Mm
{
    padding: 0 15px;
}

.Mp_Hdr ul.Mm li
{
    height: 50px;
    margin: 0;
    float: left;
    position: relative;
    z-index: 99999;
    border-left: 1px solid #245d89;
}

.Mp_Hdr ul.Mm li:last-child
{
    border-right: 1px solid #245d89;
}

.Mp_Hdr ul.Mm li:hover
{
    background-color: #276da3;
}

.Mp_Hdr ul.Mm li a
{
    display: block;
    font: bold 13px/50px Arial, sans-serif;
    position: relative;
    color: #fff;
    margin: 0;
    height: 50px;
}

.Mp_Hdr .G ul.Mm li a
{
    padding: 0 10px;
}

/*------------ Drop menu ------------ */
.Mp_Hdr ul.Mm li img.Avtr
{
    border: 1px solid #f1f1f1 !important;
    padding: 1px;
    border-radius: 2px 2px 2px 2px;
    background-color: #ffffff;
    height: 24px;
    margin: 0 10px 0 0;
    width: 24px;
}

.Mp_Hdr ul.Mm li.Dm
{
    min-width: 150px;
}

.Mp_Hdr ul.Mm li.Dm img
{
    vertical-align: middle;
}

.Mp_Hdr ul.Mm li ul.Sm
{
    top: 37px;
    position: absolute;
    margin: 7px 0 0 25px;
    background-color: #058dc7;
    border-radius: 4px 4px 4px 4px;
    padding: 4px;
    display: none;
}

.Mp_Hdr ul.Mm li:hover ul.Sm
{
    display: block;
}

.Mp_Hdr ul.Mm li:hover ul.Sm:after
{
    content: '';
    display: block;
    position: absolute;
    top: -10px;
    left: 50px;
    width: 0px;
    height: 0px;
    border-style: solid;
    border-width: 0 10px 10px 10px;
    border-color: transparent transparent #058dc7 transparent;
}

.Mp_Hdr ul.Mm li ul.Sm li
{
    float: none;
    display: block;
    margin: 0;
    min-width: 100px;
    font-size: 12px;
    font-weight: bold;
    color: #ffffff;
    background-color: #058dc7;
    border-right: none;
    border-left: none;
    border-bottom: 1px solid #09A0E1;
    height: auto;
}

.Mp_Hdr ul.Mm li ul.Sm li:hover
{
    background: #09a0e1;
}

.Mp_Hdr ul.Mm li ul.Sm li:last-child
{
    border: none;
}

.Mp_Hdr ul.Mm li ul.Sm li a
{
    display: block;
    color: #ffffff;
    font-size: 12px;
    font-weight: normal;
    padding: 8px 10px;
    height: auto;
    line-height: normal;
}

/* ------------ Bread crumbs -----------------------------------------------------------------------------------------------------------------------------------*/
div.Mp_B
{
    padding: 0 0 10px 0;
    text-align: left;
}

div.Mp_B table
{
    width: 100%;
}

div.Mp_B table tr td, div.Mp_B a, div.Mp_B a:hover
{
    font-size: 11px;
}

div.Mp_B span.L
{
    font-weight: bold;
    font-size: 12px;
}

/* ------------ Left area --------------------------------------------------------------------------------------------------------------------------------------*/
.Mp_L
{
    vertical-align: top;
    padding: 0 40px 110px 0;
    float: left;
}

/*------------ Page content -----------------------------------------------------------------------------------------------------------------------------------*/
.Mp_NnFtr
{
    width: 100%;
    padding: 0;
    min-width: 960px;
    width: 100%;
    min-height: 100%;
    _height: 100%;
}

.Mp_Pc
{
    height: 100%;
    vertical-align: top;
    background-color: White;
    _float: left;
    _margin-left: 0 !important;
}

.Mp_Pm
{
    padding: 20px 5% 20px 5%;
    width: 90%;
    float: left;
}

.Mp_PcSlgOnFtrOn
{
    padding-bottom: 200px;
}

/*------------ Main menu --------------------------------------------------------------------------------------------------------------------------------------*/
.Mp_Mm
{
    background: none repeat scroll 0 0 #F1F1F1;
    border-bottom: 1px solid #E5E5E5;
    border-top: 1px solid #fff;
    height: auto;
    margin: 0;
    overflow: hidden;
    padding: 0 5% 0 5%;
}

.Mp_Mm ul
{
    padding: 8px 0;
    float: left;
    width: 100%;
}

/*------------ Main menu item ------------ */
.Mp_Mm ul li
{
    display: inline;
    float: left;
    margin: 0;
}

.Mp_Mm ul li a
{
    color: #333333;
    padding: 5px 8px;
    margin: 0 5px 0 0;
    text-decoration: none !important;
    font-weight: bold;
    font-size: 14px;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px 4px 4px 4px;
    border: 1px solid transparent;
}

/*------------ Selected and hovered main menu item ------------ */
.Mp_Mm ul li a:hover, .Mp_Mm ul li.S a
{
    background-color: #e5e5e5;
    color: #222222;
    text-shadow: 0px 1px 0px #f1f1f1;
    border: 1px solid #dcdcdc;
}

/*------------ Active main menu item ------------ */
.Mp_Mm ul li a:active
{
    text-shadow: -1px -1px 0 #058dc7;
    box-shadow: inset 0px 1px 0px 0px #63a8dd;
    color: #ffffff;
    background-color: #09a0e1;
    border: 1px solid #058dc7;
}

/*------------ Submenu ----------------------------------------------------------------------------------------------------------------------------------------*/
/*------------ Left submenu ------------ */
.Mp_Sm a, .Mp_Sm a:hover
{
    text-decoration: none;
}

/*------------ Submenu second level item ------------ */
ul.Mp_Sm li
{
    padding: 5px 0;
    margin: 0;
}

ul.Mp_Sm li a
{
    color: #004174;
    padding: 3px 8px;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px 4px 4px 4px;
}

ul.Mp_Sm li a:hover
{
    background-color: #E9E9E9;
}

/*------------ Submenu first level item ------------ */
.Mp_Sm li.F
{
    font-size: 15.5px;
    padding-bottom: 5px;
    margin: 15px 0 5px;
    border-bottom: 1px solid #E5E5E5;
}

ul.Mp_Sm li.F a, ul.Mp_Sm li.F a:hover
{
    color: #000000;
}

.Mp_Sm li.Fst
{
    margin-top: 0;
    padding-top: 0;
}

/*------------ Top submenu ------------ */
.Mp_Smt
{
    background: none repeat scroll 0 0 #fbfbfb;
    border-bottom: 1px solid #E5E5E5;
    border-top: 1px solid #fff;
    height: auto;
    margin: 0;
    overflow: hidden;
    padding: 0 5%;
}

.Mp_Smt ul
{
    padding: 8px 0;
    float: left;
    width: 100%;
}

.Mp_Smt ul li
{
    display: inline;
    float: left;
    margin: 0;
}

.Mp_Smt ul li a
{
    font-weight: normal;
    color: #333333;
    padding: 5px 8px;
    margin: 0 5px 0 0;
    text-decoration: none !important;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px 4px 4px 4px;
    font-size: 14px;
    border: 1px solid transparent;
}

.Mp_Smt ul li a:hover
{
    background-color: #e5e5e5;
    color: #222222;
    text-shadow: 0px 1px 0px #f1f1f1;
    border: 1px solid #dcdcdc;
}

.Mp_Smt ul li.S a
{
    color: white;
    font-weight: bold;
    background-color: #2e7dba;
    border-color: #045f86;
    text-shadow: -1px -1px 0 #045f86;
    box-shadow: inset 0px 1px 0px 0px #63a8dd;
}

.Mp_Smt ul li a:active, .Mp_Smt ul li.S:hover a
{
    text-shadow: -1px -1px 0 #058dc7;
    box-shadow: inset 0px 1px 0px 0px #63a8dd;
    color: #ffffff;
    background-color: #09a0e1;
    border: 1px solid #058dc7;
}

/*------------ Footer -----------------------------------------------------------------------------------------------------------------------------------------*/
.Mp_Ftr
{
    height: 100px;
    background: background-color: #F4F4F4;
    width: 100%;
    min-width: 960px;
    border-bottom: 1px solid #fff;
    border-top: 1px solid #CCC;
    color: #777;
    float: left;
    margin-top: -111px;
}

.Mp_Ftr a
{
    color: #555555;
    text-decoration: none;
}

.Mp_Ftr a:hover
{
    color: #000;
    text-decoration: none;
    border-bottom: 1px dashed;
}

.Mp_Ftr .Cpy, .Mp_Ftr .Cpy a
{
    color: #000;
    font-size: 12px !important;
    font-weight: bold;
}

.Mp_Ftr .L
{
    float: left;
    width: auto;
    text-align: left;
    margin-left: 5%;
    position: absolute;
    left: 0;
    padding: 10px 0;
}

.Mp_Ftr .L ul li
{
    font-size: 10.3px;
    line-height: 1.5;
    display: inline;
    padding: 0 5px;
}

.Mp_Ftr .R
{
    float: right;
    width: auto;
    text-align: right;
    margin-right: 5%;
    padding: 10px 0;
}

.Mp_Ftr .R ul
{
    display: block;
}

.Mp_Ftr .R ul li
{
    font-size: 10.3px;
    line-height: 1.5;
}

